# weather_app

./: .gitignore  Dockerfile  README.MD  docker-compose.yaml  pyproject.toml
src/: app.py  services.py
static/: script.js  style.css
templates/: index.html
tests/: tests.py
